--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -15,12 +15,14 @@
         </div>
     <section id="secondalinea">
         <div>
-            <p><a href="#">All</a></p>
-            <p><a href="#">Today's deals</a></p>
-            <p><a href="#">Customer Service</a></p>
-            <p><a href="#">Registry</a></p>
-            <p><a href="#">Gift Cards</a></p>
-            <p><a href="#">Sell</a></p>
+           <ul>
+            <a href="#"><li class="listanonordinata">All</a></li>
+            <a href="#"><li class="listanonordinata">Today's deals</a></li>
+            <a href="#"><li class="listanonordinata">Customer Service</a></li>
+            <a href="#"><li class="listanonordinata">Registry</a></li>
+            <a href="#"><li class="listanonordinata">Gift Cards</a></li>
+            <a href="#"><li class="listanonordinata">Sell</a></li>
+           </ul>
         </div>
     </section>
     <section id="terzalinea">
@@ -37,14 +39,14 @@
     </header>
     <main>
         <section id="contenitorefoto">
-            <div>
                 <h2 class="titolifoto">Find the perfect gift</h2>                      
                 <a href="#" class="linkamazon">Shop now</a>
-            </div>
-            <div class="foto uno"><img src="./assets/img/img_1.jpg"></div>
-            <div class="foto due"><img src="./assets/img/img_2.jpg"></div>
-            <div class="foto tre"><img src="./assets/img/img_3.jpg"></div>
-            <div class="foto quattro"><img src="./assets/img/img_4.jpg"></div>
+                <div class="contenitorefotointerno">
+                    <div class="fotointerna" id="n1"></div>
+                    <div class="fotointerna" id="n2"></div>
+                    <div class="fotointerna" id="n3"></div>
+                    <div class="fotointerna" id="n4"></div>
+                </div>          
         </section>
         <section id="contenitorefoto2">
             <div>
