--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -39,8 +39,10 @@
     </header>
     <main>
         <section id="contenitorefoto">
+            <div class="scrittacontenitorefoto">  
                 <h2 class="titolifoto">Find the perfect gift</h2>                      
                 <a href="#" class="linkamazon">Shop now</a>
+            </div> 
                 <div class="contenitorefotointerno">
                     <div class="fotointerna" id="n1"></div>
                     <div class="fotointerna" id="n2"></div>
