--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="primalinea">
-            <img src="./assets/img/logo.png" alt="Logo Amazon">
+            <a href="#"><img src="./assets/img/logo.png" alt="Logo Amazon"></a>
         </div>
     <section id="secondalinea">
         <div>
@@ -74,7 +74,7 @@
             <a href="#" id="backtotop">Back to top</a>
         </div>
         <div id="ultimariga">
-            <img src="./assets/img/logo.png" width="10%">
+           <a href="#"><img src="./assets/img/logo.png" width="10%"></a>
         </div>
     </footer>
 </body>
